# scuttle_ros2

src/scuttle_bringup/: CMakeLists.txt  package.xml
src/scuttle_bringup/config/: robot_params.yaml
src/scuttle_bringup/launch/: real.launch.py  robot.launch.py  sim.launch.py  sim.launch.py.backup.1764515513  sim.launch.py.backup.1764516203  sim.launch.py.backup.complete_fix.1764032437  sim.launch.py.backup.trufix.1764032934  view_robot.launch.py
src/scuttle_description/: CMakeLists.txt  README.md  model.config  package.xml  setup_gazebo_models.sh
src/scuttle_description/config/: bridge_config.yaml  scuttle_controllers.yaml
src/scuttle_description/launch/: rviz.launch.py
src/scuttle_description/rviz/: urdf.rviz
src/scuttle_description/urdf/: scuttle.gazebo  scuttle.gazebo.backup.1764439971  scuttle.trans  scuttle.xacro
src/scuttle_gazebo/: CMakeLists.txt  CMakeLists.txt.backup.1764514899  package.xml
src/scuttle_gazebo/launch/: gazebo.launch.py  robot.launch.py  robot.launch.py.backup.1764514899  robot.launch.py.backup.1764515301
src/scuttle_gazebo/scripts/: fix_odom_frame.py  fix_scan_frame.py  odom_to_tf.py  teleop_autostop.py
src/scuttle_gazebo/worlds/: empty.sdf  warehouse.sdf
src/scuttle_nav/: CMakeLists.txt  README.md  package.xml
src/scuttle_nav/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/scuttle_nav/launch/: nav2.launch.py  slam.launch.py
src/scuttle_nav/maps/: warehouse1_map.data  warehouse1_map.pgm  warehouse1_map.yaml  warehouse_map.pgm  warehouse_map.yaml
